One more alignment issue.

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -779,7 +779,6 @@ table.aKk .inboxsdk__contentTabContainer .inboxsdk__tab:first-child .aAy[role=ta
 
 .IDMAP_app_sidebar {
   position: relative;
-  width: 232px;
 }
 
 .IDMAP_app_sidebar_content_panel {
